1727537960954
Added the ability to set both start and end boundaries in the project's report interval selector.
YouTube focus music now resumes from where it left off, instead of restarting at the beginning of each session.
The project filter on the tasks page now persists across tabs and pages.
Added filtering by category to the principles page.
1726893259773
Select specific focus notifications you want to receive: session end, workday end, eye break.  
Turn on/off focus notification sound alerts from the focus page.
During a focus session, you can hover over the timer to see the log of your current focus session, where each item is either work on a project with a duration, or a break with a duration.
Tasks, projects, habits, life aspirations, goals, ideas, and principles changes are saved automatically without the need to press the "Save" button.
1726289037356
Sub-tasks section is hidden by default, appears only when you choose to add sub-tasks. Collapsible and decluttered with hover-only drag-and-drop and remove button.
Task links section is hidden by default, appears only when adding links. More compact for easier task management.
Real-time updates for time spent on tasks are visible while working, along with task deadlines when selected.
1725723647758
Quickly change current focus task.
Easily edit current focus task name, description, links and checklist from the focus page
Focus music stops when the focus session is paused
Export all your data as a JSON file
1725206936434
Filter tasks by project in the focus launcher
Set custom task deadlines
Add description to a life aspiration to make it more specific and clear
1724477563708
Kanban board for tasks to easily access all your tasks in one place and drag and drop them between columns.
An option to group scheduled tasks by weeks.
Task statuses: backlog, todo, in progress, done. When you start working on a task, it's status automatically changes to "in progress".