@@ -2,7 +2,7 @@ import { debounce } from '@lib/utils/debounce'
 import { Dimensions } from '@lib/utils/entities/Dimensions'
 import { pick } from '@lib/utils/record/pick'
 import { useState } from 'react'
-import { useIsomorphicLayoutEffect } from 'react-use'
+import { useIsomorphicLayoutEffect } from '@lib/ui/hooks/useIsomorphicLayoutEffect'
 
 const getElementSize = (element: HTMLElement): Dimensions =>
   pick(element.getBoundingClientRect(), ['height', 'width'])
